# pdk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backup-restore.md  daily-workflows.md  data-locations.md  model-setup.md  privacy-model.md  quickstart.md
scripts/: download_models.py  install.sh
src/pdk/: __init__.py  analytics.py  audio_commands.py  cli.py  command_support.py  commands.py  completions.py  context_builder.py  context_commands.py  context_config.py  context_files.py  context_models.py  context_rendering.py  database.py  editor.py  file_commands.py  file_index.py  file_workflows.py  interactive.py  model_loader.py  models.py  parser.py  privacy.py  privacy_commands.py  project.py  project_commands.py  prompt_commands.py  prompt_hygiene.py  security.py  session_commands.py  session_config.py  session_state.py  sources.py  store.py  store_base.py  store_history.py  store_notes.py  store_projects.py  store_prompts.py  store_tags.py  (+9 more)
src/pmpt/: cli.py  editor.py  interactive.py  store.py  templating.py  tokens.py  tui.py  ui.py
tests/: __init__.py  cli_base.py  helpers.py  test_cli.py  test_cli_browser.py  test_cli_context.py  test_cli_help.py  test_cli_privacy.py  test_cli_project.py  test_cli_session.py  test_cli_transfer.py  test_completions.py  test_file_index.py  test_file_workflows.py  test_model_loader.py  test_models.py  test_packaging.py  test_privacy.py  test_prompt_hygiene.py  test_sources.py  test_summary.py  test_system_adapters.py  test_templating.py  test_text_analysis.py  test_tui.py
