[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pmpt"
version = "0.1.0"
description = "A tiny global prompt store CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.scripts]
pmpt = "pmpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
