[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-deck"
version = "0.1.0"
description = "Prompt Deck is a tiny global prompt store CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.scripts]
pdk = "pmpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
