[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-deck"
version = "0.1.0"
description = "Prompt Deck is a tiny global prompt store CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "pydantic>=2.0",
    "textual>=8.2,<9",
    "tiktoken>=0.9",
]

[project.optional-dependencies]
audio = [
    "ctranslate2>=4.6",
    "faster-whisper>=1.1",
    "numpy>=1.26",
    "sounddevice>=0.5",
]
files = [
    "beautifulsoup4>=4.12",
    "EbookLib>=0.18",
    "PyMuPDF>=1.26",
]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
]
summary = [
    "mlx-lm>=0.22",
]

[project.scripts]
pdk = "pdk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
